--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
         "fs-extra": "^10.0.0",
         "klaw": "^3.0.0",
         "react-beautiful-dnd": "^13.1.0",
+        "react-window": "^1.8.6",
         "sirv-cli": "^1.0.14",
         "vite": "^2.6.14"
     },
     "devDependencies": {
+        "@types/react-window": "^1.8.5",
         "@fontsource/atkinson-hyperlegible": "^4.4.5",
         "@fontsource/bree-serif": "^4.4.5",
         "@fontsource/comic-neue": "^4.4.5",
